--- a/index.html
+++ b/index.html
@@ -72,26 +72,22 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="img-box">
-                    <img src="images/slider-img.png" alt="">
+                    <img src="images/icramie.jpg" alt="">
                   </div>
                 </div>
                 <div class="col-md-6">
-                  <div class="detail-box">
-                    <h1>
-                      ICRAMIE 2025  
-                      <p> 21 &amp 22 March,2025</p>
-                    </h1>
-                    <p>
-                      International conference on recent advancements in Mechnanical and industrial engineering
-                    </p>
-                    <p>
-                      Department Of Mechnanical Engneering ,
-                    </p>
-                    <p>
-                      Prasad V Potluri Siddhartha Institute Of Technology , Vijayawada
-                    </p>
-                    
-                  </div>
+                  <section class="slider_section">
+                    <div class="content-box">
+                      <h1>
+                        ICRAMIE 2025
+                      </h1>
+                      <p><span>21 &amp; 22 March, 2025</span></p>
+                      <p>
+                        International conference on recent advancements in Mechanical and Industrial Engineering
+                      </p>
+                    </div>
+                  </section>
+                  
                 </div>
               </div>
             </div>
@@ -101,7 +97,7 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="img-box">
-                    <img src="images/slider-img.png" alt="">
+                    <img src="images/icramie.jpg" alt="">
                   </div>
                 </div>
                 <div class="col-md-6">
@@ -134,7 +130,7 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="img-box">
-                    <img src="images/slider-img.png" alt="">
+                    <img src="images/icramie.jpg" alt="">
                   </div>
                 </div>
                 <div class="col-md-6">
@@ -590,11 +586,78 @@
     </div>
   </section>
   
-  
+  <br></br>
   
   <!-- end client section -->
 
+<!-- organizing committe-->
 
+<section class="organizing_committee_section">
+  <div class="container">
+    <div class="section_header text-center">
+      <h2>ORGANIZING COMMITTEE</h2>
+    </div>
+    <div class="committee_list">
+      <h3>Chief Patron(s)</h3>
+      <ul>
+        <li>Sri Ch. Nageswara Rao, President, SAGTE</li>
+        <li>Sri. P. Lakshmana Rao, Secretary, SAGTE</li>
+        <li>Sri. S. Venkateswara Rao, Treasurer, SAGTE</li>
+        <li>Sc V. Nagabhushana Rao, Convenor, PVPSIT</li>
+      </ul>
+      <h3>Patron</h3>
+      <ul>
+        <li>Dr. K Sivaji Babu, Principal, PVPSIT</li>
+      </ul>
+      <h3>Convenor</h3>
+      <ul>
+        <li>Dr. B. Raghu Kumar, Prof. & HOD, Dept. of ME</li>
+      </ul>
+      <h3>Co-Convenors</h3>
+      <ul>
+        <li>Dr. P. Phani Prasanthi, Asso. Professor, Dept. of ME</li>
+        <li>Dr. P. Ravi Prakash Babu, Asso. Professor, Dept. of ME</li>
+      </ul>
+    </div>
+<br></br>
+    <div class="section_header text-center">
+      <h2>TECHNICAL COMMITTEE</h2>
+    </div>
+    <div class="committee_list">
+      <ul>
+        <li>Dr. B. Raghu Kumar, HOD, Dept. Mechanical Engineering, PVPSIT</li>
+        <li>Dr. M.S.R. Niranjan Kumar, COE, Professor, PVPSIT</li>
+        <li>Dr. K. Srividya</li>
+        <li>Mr. U. Koteswara Rao</li>
+        <li>Dr. M. Naga Swapna Sri</li>
+        <li>Dr. Abdul Kalam</li>
+        <li>Dr. P. Anusha</li>
+        <li>Dr. Ch. Kishore Reddy</li>
+        <li>Dr. K.I.V. Vandana</li>
+        <li>Mr. T. Sri Nag</li>
+        <li>Mr. N. Raghuram</li>
+        <li>Ms. E. Kavitha</li>
+        <li>Mr. G. Bala Krishna</li>
+        <li>Dr. M. Rajya Lakshmi</li>
+        <li>Mr. K. Venkata Rao</li>
+        <li>Mr. Ch. Lakshmikanth</li>
+        <li>Mr. P. Mastan Rao</li>
+        <li>Mr. Ch. Mohan Sumanth</li>
+        <li>Mr. P. Gopala Krishnaiah</li>
+        <li>Ms. Ch. Vidya</li>
+        <li>Dr. M. Somaiah Chowdary</li>
+        <li>Ms. M. Radha Devi</li>
+        <li>Mr. T. J. Prasanna Kumar</li>
+        <li>Mr. J. Surendra</li>
+        <li>Ms. V. Sravani</li>
+        <li>Mr. I. Manoj Kumar</li>
+      </ul>
+    </div>
+  </div>
+</section>
+
+<br></br>
+<!-- end of organizing committe-->
 
   <!-- contact section -->
    
